Restructure AR(1), add group-FE support
Warning: Check tests(). The tests do not pass yet for AR(1) with covariates or with group-FEs.

--- a/inst/AR1.lyx
+++ b/inst/AR1.lyx
@@ -258,6 +258,10 @@ The only source of endogeneity in this regression is that
 \begin_inset Formula $z_{it}=\left(x_{it-2},y_{it-2}\right)$
 \end_inset
 
+ or 
+\begin_inset Formula $z_{it}=\left(x_{it-2},y_{it-2},w_{it-2}\right)$
+\end_inset
+
 .
 \end_layout
 
@@ -347,10 +351,6 @@ Simulation Exercise
 
 \end_inset
 
-
-\end_layout
-
-\begin_layout Plain Layout
 
 \end_layout
 
