--- a/vignettes/PanelReg.Rmd
+++ b/vignettes/PanelReg.Rmd
@@ -234,7 +234,7 @@ head(reg)
 
 The package provides two strategies for estimating the AR(1) model: Panel IV and GMM.
 
-**Panel IV:** The error structure implies that, $$ y_{it} = \rho y_{it-1} + x_{it}'\beta +  x_{it-1}'(-\beta\rho) +  x_{it}'\gamma + x_{it-1}'(-\gamma\rho) + \eta_{it}$$ Since only $x_{it}$ depends on the unobservable $\eta_{it}$, and lagged values of $x$ are independent of contemporaneous $\eta$, it follows that $\beta$ can be estimated by a regression of $y_{it}$ on $x_{it}$, with instrument $x_{it-2}$, controlling for $(y_{it-1}, x_{it-1}, w_{it-1})$. Another available instrument is $y_{it-2}$, so there is an option to use the lagged outcome as an IV as well. 
+**Panel IV:** The error structure implies that, $$ y_{it} = \rho y_{it-1} + x_{it}'\beta +  x_{it-1}'(-\beta\rho) +  w_{it}'\gamma + w_{it-1}'(-\gamma\rho) + \eta_{it}$$ Since only $x_{it}$ depends on the unobservable $\eta_{it}$, and lagged values of $x$ are independent of contemporaneous $\eta$, it follows that $\beta$ can be estimated by a regression of $y_{it}$ on $x_{it}$, with instrument $x_{it-2}$, controlling for $(y_{it-1}, x_{it-1}, w_{it}, w_{it-1})$. Another available instrument is $y_{it-2}$, so there is an option to use the lagged outcome as an IV as well. 
 
 
 **GMM:** The error structure implies that, for any guess of $(\beta,\gamma,\rho)$, we can construct the implied $\eta$: $$\hat\eta(\beta,\gamma,\rho) \equiv (y_{it} - \rho y_{it-1}) - (x_{it} - \rho x_{it-1})'\beta - (w_{it} - \rho w_{it-1})'\gamma$$ The GMM approach uses that, at the true values of the parameters, the following vector of moments should hold: $$\mathbb{E}[(x_{it-1},x_{it-2},w_{it}) \hat\eta(\beta,\gamma,\rho) ] = \vec{0}$$ Similar moments should hold with respect to lagged values of the outcome, $y_{it-1}$ and $y_{it-2}$ The implementation is as follows:
